--- a/css/header.css
+++ b/css/header.css
@@ -30,7 +30,7 @@
 .header__subscription-title {
   width: 623px;
   margin-bottom: 25px;
-  font-family: "Lora", serif;
+  font-family: "Lora", "Georgia", serif;
   color: rgba(255, 255, 255, 1);
   font-weight: 400;
   font-style: italic;
@@ -57,7 +57,7 @@
   width: 160px;
   height: 25px;
   color: #ffffff;
-  font-family: "Roboto", "sans-serif";
+  font-family: "Roboto", "Arial", "Helvetica", sans-serif;
   font-weight: 500;
   font-size: 10px;
   letter-spacing: 0.05em;
@@ -114,7 +114,7 @@
 }
 
 .subscription-card__discription {
-  font-family: "Lora", serif;
+  font-family: "Lora", "Georgia", serif;
   font-size: 14px;
 }
 
@@ -126,7 +126,7 @@
   height: 53px;
   margin-top: 40px;
   color: #ffffff;
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto", "Arial", "Helvetica", sans-serif;
   font-size: 13px;
   letter-spacing: 0.1em;
   text-transform: uppercase;
