--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 .header {
-  background: #1c232d;
+  background-color: #1c232d;
 }
 
 .header__container {
@@ -46,7 +46,7 @@
   height: 35px;
   margin-bottom: 30px;
   padding: 5px;
-  background: rgba(255, 255, 255, 0.05);
+  background-color: rgba(255, 255, 255, 0.05);
   border-radius: 2px;
 }
 
@@ -72,7 +72,7 @@
 }
 
 .header__switch-radio:checked + label {
-  background: #555e6d;
+  background-color: #555e6d;
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.1);
   opacity: 1;
 }
