--- a/css/generic.css
+++ b/css/generic.css
@@ -50,3 +50,11 @@ ul {
   width: 1220px;
   margin: 0 auto;
 }
+
+.title {
+  font-family: "Proxima Nova Th", "Helvetica", sans-serif;
+  font-size: 26px;
+  line-height: 42px;
+  letter-spacing: -0.01em;
+  text-align: center;
+}
