--- a/css/header.css
+++ b/css/header.css
@@ -98,6 +98,10 @@
   background-color: #ffffff;
 }
 
+.subscription-card:focus-within {
+  outline: 2px solid #ff0000;
+}
+
 .subscription-card__title {
   color: #1a232e;
   font-family: "Proxima Nova Bl", "Helvetica", sans-serif;
@@ -136,6 +140,10 @@
   box-shadow: 0px 5px 15px rgba(10, 14, 18, 0.05);
 }
 
+.subscription-card__button:active {
+  opacity: 0.7;
+}
+
 .subscription-card--active {
   transform: scale(1.01);
 }
@@ -158,7 +166,15 @@
   transform: scale(1.01);
 }
 
+.subscription-card:focus-within {
+  transform: scale(1.01);
+}
+
 .subscription-card:hover > .subscription-card__button {
+  background-color: #ff0000;
+}
+
+.subscription-card__button:focus {
   background-color: #ff0000;
 }
 
