--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,10 @@
   background-color: #ffffff;
 }
 
+.features__item:focus-within {
+  outline: 1px solid #111111;
+}
+
 .features__item:nth-child(3n) {
   margin-right: 0;
 }
@@ -27,7 +31,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 400px;
+  width: 100%;
 }
 
 .features__title {
@@ -109,6 +113,10 @@
 }
 
 .faq__tab-label:hover {
+  background-color: #eef2f7;
+}
+
+.faq__tab-chekbox:focus ~ .faq__tab-label {
   background-color: #eef2f7;
 }
 
