--- a/css/styles.css
+++ b/css/styles.css
@@ -2,4 +2,5 @@
 @import url(./generic.css);
 
 @import url(./header.css);
-@import url(./main.css)
+@import url(./main.css);
+@import url(./media.css);
