--- a/css/main.css
+++ b/css/main.css
@@ -156,18 +156,10 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
   padding: 0 50px;
 }
 
 .members__item {
-  margin-right: 89px;
-  margin-bottom: 50px;
-}
-
-.members__item:nth-child(6n) {
-  margin-right: 0;
-}
-
-.members__item:nth-child(7n) {
-  margin-left: 129px;
+  margin: 0 37px 50px;
 }
